Added new spec.
